# wooting-analog-midi

./: Cargo.toml  README.md  disable_numpad.ahk  toggle_keyboard.ahk
src/: main.rs
wooting-analog-midi-core/: Cargo.toml
wooting-analog-midi-core/src/: config.rs  lib.rs  note.rs
