[package]
name = "wooting-analog-midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wooting-analog-midi-core = { path = "./wooting-analog-midi-core/" }
tray-icon = "0.10"
tao = "0.23"
image = { version = "*", default-features = false, features = ["png"] }
anyhow = "1.0"
spin_sleep = "1.1"
log = "0.4"
env_logger = "0.10"
